--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+body {
+    /* font-family: "Karla", sans-serif; */
+    font-family: "Montserrat", sans-serif;
+    background-color: #ffefed;
 }
